# ha-codex-assist

./: .gitignore  AGENTS.md  LICENSE  README.md  SECURITY.md  hacs.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
custom_components/codex_assist/: __init__.py  ai_task.py  codex_auth.py  codex_client.py  codex_image.py  codex_models.py  codex_runtime.py  config_flow.py  conversation.py  manifest.json  strings.json
custom_components/codex_assist/translations/: en.json
docs/: ARCHITECTURE.md  WORKFLOW.md
docs/plans/: 2026-06-02-device-code-oauth-flow.md
tests/: test_ai_task_source.py  test_codex_auth.py  test_codex_client.py  test_codex_client_attachments.py  test_codex_client_image_generation.py  test_codex_client_stream_turn.py  test_codex_client_streaming.py  test_codex_device_auth.py  test_codex_image.py  test_codex_models.py  test_codex_runtime.py  test_config_flow_device_auth.py  test_config_flow_translations.py  test_config_flow_unique_id_source.py  test_conversation_history_source.py  test_conversation_reauth_logging_source.py  test_conversation_runtime_source.py  test_integration_scaffold.py  test_options_flow_source.py
